[package]
name = "neo_granseal"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.2", features = ["default", "bytemuck","rwh_05"] }
wgpu = {version = "0.17.1", features = ["wgsl","default"]}
pollster = "0.3.0"
bytemuck = {version = "1.14.0", features = ["extern_crate_std","bytemuck_derive"]}
bytemuck_derive = "1.5.0"
image = { version = "0.24.7", features = ["png"] }
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
num-traits = "0.2.17"

[lib]

[[example]]
name = "pixels"
test = false

[[example]]
name = "other"
test = false

[[example]]
name = "shapes"
test = false

[[example]]
name = "simplest_box"
test = false

[profile.release]
debug = true