[package]
name = "neo_granseal"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.15", features = ["default", "bytemuck","rwh_05"] }
wgpu = {version = "0.19.3", features = ["wgsl","default","webgl"]}
pollster = "0.3.0"
bytemuck = {version = "1.15.0", features = ["extern_crate_std","bytemuck_derive"]}
bytemuck_derive = "1.6.0"
image = { version = "0.25.0", features = ["png"] }
log = "0.4.21"
env_logger = "0.11.3"
rand_xorshift = { version = "0.3.0"}
rand = {version = "0.8.5" , features = ["getrandom"]}
num-traits = "0.2.18"

[lib]

[[example]]
name = "pixels"
test = false

[[example]]
name = "shapes"
test = false

[[example]]
name = "simplest_box"
test = false

[profile.release]
debug = true